falta la vista y logica

--- a/grupo1GestorTickets.Server/appsettings.json
+++ b/grupo1GestorTickets.Server/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "TicketDb": "DESKTOP-PUSHRP2\\CARLOS; Initial Catalog= system_ticket; User Id= sa; Password= 1704; Connect Timeout = 120: Encrypt= False "
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
