--- a/grupo1GestorTickets.Server/appsettings.json
+++ b/grupo1GestorTickets.Server/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "TicketDb": "DESKTOP-PUSHRP2\\CARLOS; Initial Catalog= system_ticket; User Id= sa; Password= 1704; Connect Timeout = 120: Encrypt= False "
-
+    "TicketDb": "Server=DESKTOP-PUSHRP2\\CARLOS;Database=system_ticket;User Id= sa;Password=1704;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
