--- a/grupo1GestorTickets.Server/appsettings.json
+++ b/grupo1GestorTickets.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TicketDb": "Server=DESKTOP-PUSHRP2\\CARLOS;Database=system_ticket;User Id= sa;Password=1704;Encrypt=False;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -7,3 +10,4 @@
   },
   "AllowedHosts": "*"
 }
+
