--- a/grupo1GestorTickets.Server/appsettings.json
+++ b/grupo1GestorTickets.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TicketDb": "Server=DESKTOP-PUSHRP2\\CARLOS;Database=system_ticket;User Id= sa;Password=1704;Encrypt=False;"
+    "TicketDb": "Server=TIMEMHA;Database=system_ticket;User Id= sa;Password=devslayer;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
