--- a/grupo1GestorTickets.Server/appsettings.json
+++ b/grupo1GestorTickets.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TicketDb": "Server=TIMEMHA;Database=system_ticket;User Id= sa;Password=devslayer;Encrypt=False;"
+    "TicketDb": "Server=DESKTOP-PIJA0DR\\MSSQLSERVER01;Database=system_ticket;User Id= sa;Password=12345;Encrypt=False;"
   },
   "Logging": {
     "LogLevel": {
