--- a/grupo1gestortickets.client/package.json
+++ b/grupo1gestortickets.client/package.json
@@ -16,6 +16,7 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-icons": "^1.11.4",
     "react-chartjs-2": "^5.2.0",
     "react-chat-elements": "^12.0.14",
     "react-dom": "^18.2.0",
