--- a/grupo1gestortickets.client/package.json
+++ b/grupo1gestortickets.client/package.json
@@ -16,10 +16,12 @@
     "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-icons": "^1.11.4",
     "react-chartjs-2": "^5.2.0",
     "react-chat-elements": "^12.0.14",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-to-print": "^2.15.1",
     "react-toastify": "^10.0.5"
